--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
         <button id="button-0">0</button>
       </div>
     </div>
+    <!-- js file -->
+    <script src="custom.js"></script>
   </body>
 </html>
